--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="/webres/js/main/KotelTabPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelViewPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelControlPanel.js"></script>
+        <script type="text/javascript" src="/webres/js/kotel/KotelControlWin.js"></script>
         <script type="text/javascript" src="/webres/js/main/SettingsTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/Devices.js"></script>
         <script type="text/javascript" src="/webres/js/main/Users.js"></script>
