--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="/webres/js/maps/MapsCtrl.js"></script>
         <script type="text/javascript" src="/webres/js/main/ControlTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/loadStores.js"></script>
-        <script type="text/javascript">var user = {login:''};</script>
+        <script type="text/javascript">var user = {login:'{{.LOGIN}}'};</script>
         <title>HOME Controll</title>
     </head>    
     <body id="boby"><div id="vp"></div></body>
