--- a/webres/html/login.html
+++ b/webres/html/login.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="/webres/extjs/locale/ext-lang-ru.js"></script>        
         <script type="text/javascript" src="/webres/js/common.js"></script>
         <script type="text/javascript" src="/webres/js/login.js"></script>
-        <script type="text/javascript"> var error = '';</script>
+        <script type="text/javascript"> var error = '{{.Error_Message}}';</script>
         <title>HOME Controll - Авторизация</title>
     </head>
     <body style="background:url(/webres/extjs/img/fon1.png) center bottom;"><!--div id="devPict"></div--></body>
