--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="/webres/js/maps/MapSensorsGrid.js"></script>
         <script type="text/javascript" src="/webres/js/maps/MapTemplate.js"></script>
         <script type="text/javascript" src="/webres/js/maps/MapsCtrl.js"></script>
+        <script type="text/javascript" src="/webres/js/room/RoomDataChartWin.js"></script>
         <script type="text/javascript" src="/webres/js/main/ControlTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/loadStores.js"></script>
         <script type="text/javascript">var user = {login:'{{.LOGIN}}'};</script>
