room monitoring bug fix

--- a/webres/html/login.html
+++ b/webres/html/login.html
@@ -5,6 +5,7 @@
         <!--link rel="SHORTCUT ICON" href="/img/favicon.ico">
         <link href="/webres/extjs/resources/ext-theme-classic/ext-theme-classic-all.css" rel="stylesheet" type="text/css"-->
         <link href="/webres/extjs/resources/ext-theme-gray/ext-theme-gray-all.css" rel="stylesheet" type="text/css">
+        <!--ink href="/webres/extjs/resources/ext-theme-neptune/ext-theme-neptune-all.css" rel="stylesheet" type="text/css"-->
         <link href="/webres/css/customStyle.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="/webres/extjs/ext-all-debug.js"></script>
         <script type="text/javascript" src="/webres/extjs/locale/ext-lang-ru.js"></script>        
