--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="SHORTCUT ICON" href="/webres/img/favicon.ico">
         <link href="/webres/extjs/resources/ext-theme-gray/ext-theme-gray-all.css" rel="stylesheet" type="text/css">
+        <!--link href="/webres/extjs/resources/ext-theme-neptune/ext-theme-neptune-all.css" rel="stylesheet" type="text/css"-->
         <link href="/webres/css/customStyle.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="/webres/extjs/ext-all-debug.js"></script>
         <script type="text/javascript" src="/webres/extjs/locale/ext-lang-ru.js"></script>        
