--- a/webres/html/login.html
+++ b/webres/html/login.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <!--link rel="SHORTCUT ICON" href="/img/favicon.ico">
-        <link href="/webres/extjs/resources/ext-theme-classic/ext-theme-classic-all.css" rel="stylesheet" type="text/css"-->
+        <link rel="SHORTCUT ICON" href="/webres/img/favicon.ico">
+        <!--link href="/webres/extjs/resources/ext-theme-classic/ext-theme-classic-all.css" rel="stylesheet" type="text/css"-->
         <link href="/webres/extjs/resources/ext-theme-gray/ext-theme-gray-all.css" rel="stylesheet" type="text/css">
         <!--ink href="/webres/extjs/resources/ext-theme-neptune/ext-theme-neptune-all.css" rel="stylesheet" type="text/css"-->
         <link href="/webres/css/customStyle.css" rel="stylesheet" type="text/css">
