--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="/webres/extjs/ext-all-debug.js"></script>
         <script type="text/javascript" src="/webres/extjs/locale/ext-lang-ru.js"></script>        
         <script type="text/javascript" src="/webres/js/common.js"></script>
+        <script type="text/javascript" src="/webres/extjs/common/md5.js"></script>
         <script type="text/javascript" src="/webres/js/main/main.js"></script>
         <script type="text/javascript" src="/webres/js/main/KotelTabPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelViewPanel.js"></script>
