Concurent write bug fix

--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="/webres/js/kotel/KotelViewPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelControlPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelControlWin.js"></script>
+        <script type="text/javascript" src="/webres/js/kotel/KotelDelayWin.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelDataChartPanel.js"></script>
         <script type="text/javascript" src="/webres/js/main/SettingsTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/Devices.js"></script>
