All WSConnection properties  in config.json
and
Secure WS connection

--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -29,7 +29,7 @@
         <script type="text/javascript" src="/webres/js/room/RoomDataChartWin.js"></script>
         <script type="text/javascript" src="/webres/js/main/ControlTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/loadStores.js"></script>
-        <script type="text/javascript">var user = {login:'{{.LOGIN}}'};</script>
+        <script type="text/javascript">var user = {login:'{{.LOGIN}}', token:'{{.PASS}}'};</script>
         <title>HOME Controll</title>
     </head>    
     <body id="boby"><div id="vp"></div></body>
