--- a/webres/html/main.html
+++ b/webres/html/main.html
@@ -16,6 +16,10 @@
         <script type="text/javascript" src="/webres/js/kotel/KotelControlPanel.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelControlWin.js"></script>
         <script type="text/javascript" src="/webres/js/kotel/KotelDelayWin.js"></script>
+
+        <script type="text/javascript" src="/webres/js/floor/FloorControlPanel.js"></script>
+        <script type="text/javascript" src="/webres/js/floor/FloorControlWin.js"></script>
+
         <script type="text/javascript" src="/webres/js/kotel/KotelDataChartPanel.js"></script>
         <script type="text/javascript" src="/webres/js/main/SettingsTab.js"></script>
         <script type="text/javascript" src="/webres/js/main/Devices.js"></script>
